Change syntax to language level 11